# jj-spice

./: .gitignore  .goreleaser.yaml  404.html  Cargo.toml  README.md  deny.toml  index.html  mkdocs.yml  sitemap.xml
.github/workflows/: ci.yml  release.yml
cli/src/: commands.rs
cli/src/commands/: cli.rs  env.rs  install_aliases.rs  stack_clean.rs  stack_log.rs  stack_submit.rs  stack_sync.rs  stack_untrack.rs
docs/: index.md  installation-and-setup.md
docs/references/: configuration.md
installation-and-setup/: index.html
lib/: Cargo.toml
lib/gen-protos/: Cargo.toml
lib/src/: bookmark.rs  clean.rs  comments.rs  forge.rs  lib.rs  store.rs
lib/src/bookmark/: graph.rs
lib/src/comments/: comments.rs
lib/src/forge/: detect.rs  github.rs  gitlab.rs
lib/src/protos/: change_request.proto  change_request.rs
lib/src/store/: change_request.rs
search/: search_index.json
src/: bookmark.rs  bookmark_graph.rs  cli.rs  commands.rs  forge.rs  main.rs
src/bookmark/: graph.rs
src/commands/: cli.rs  completion.rs  env.rs  stack_log.rs  stack_submit.rs  stack_sync.rs
src/forge/: detect.rs  github.rs
