[workspace]
members = [".", "gen-protos"]

[package]
name = "jj-spice"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5.60", features = ["derive"] }
clap_complete = "4.5"
clap_complete_nushell = "4.5"
dunce = "1"
gix = { version = "0.78.0", default-features = false }
jj-cli = "0.38.0"
jj-lib = "0.38.0"
octocrab = "0.49.5"
prost = "0.14"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
serde_json = "1"
wiremock = "0.6"
