[package]
name = "jj-spice-lib"
description = "Core library for jj-spice — stacked change requests for Jujutsu VCS"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
const_format = "0.2.35"
gix = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
itertools = { workspace = true }
jj-lib = { workspace = true }
octocrab = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
wiremock = { workspace = true }
